<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"

        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@drawable/icon_photo"
        android:layout_alignBottom="@id/background_photo"
        android:layout_alignEnd="@id/background_photo"

        />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:text="@string/title"
       android:layout_below="@id/background_photo"/>



    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/marginTopX"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/price"
         android:layout_below="@id/title"
        android:layout_alignParentStart="true"


        />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/marginTopX"
        android:drawableEnd="@drawable/ic_location"
        android:text="@string/location"
        android:layout_below="@id/title"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/price"
        />


    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/marginTopX"
        android:layout_marginRight="@dimen/margin"
        android:text="@string/description"
        android:layout_below="@id/price"/>


    <EditText
        android:id="@+id/inventor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/marginTopX"
        android:layout_marginRight="@dimen/margin"
        android:text="@string/Inventory"
        android:layout_below="@id/description"
        />


    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/marginTopX"
        android:layout_marginRight="@dimen/margin"
        android:text="@string/weight"
        android:layout_below="@id/description"
        android:layout_alignParentRight="true"/>



</RelativeLayout>