<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/background_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        app:layout_constraintRight_toRightOf="@+id/background_photo"
        app:layout_constraintBottom_toBottomOf="@+id/background_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@drawable/icon_photo" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@+id/background_photo"/>



        <EditText
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/marginTopX"
            android:layout_marginRight="@dimen/margin"
            android:text="@string/price"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintRight_toLeftOf="@id/location"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <EditText
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/marginTopX"
            android:layout_marginRight="@dimen/margin"
            android:drawableEnd="@drawable/ic_location"
            android:text="@string/location"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintLeft_toRightOf="@id/price"
            app:layout_constraintRight_toRightOf="parent"/>


    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/marginTopX"
        android:layout_marginRight="@dimen/margin"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@id/price"/>


        <EditText
            android:id="@+id/inventor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/marginTopX"
            android:layout_marginRight="@dimen/margin"
            android:text="@string/Inventory"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintRight_toLeftOf="@id/text2"
            app:layout_constraintLeft_toLeftOf="parent"

            />
         <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/text2"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintLeft_toRightOf="@id/inventor"
        app:layout_constraintRight_toLeftOf="@id/weight"
        android:visibility="invisible"/>

        <EditText
            android:id="@+id/weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/marginTopX"
            android:layout_marginRight="@dimen/margin"
            android:text="@string/weight"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintLeft_toRightOf="@id/text2"
            app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>